; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/vc/extr_mmal_vc_diag.c_do_version.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/vc/extr_mmal_vc_diag.c_do_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UINT_MAX = common dso_local global i32 0, align 4
@MMAL_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [26 x i8] c"version %d.%02d (min %d)\0A\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [31 x i8] c"error getting version (%i:%s)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8**)* @do_version to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_version(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %10 = load i32, i32* @UINT_MAX, align 4
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* @UINT_MAX, align 4
  store i32 %11, i32* %7, align 4
  %12 = call i64 @mmal_vc_get_version(i32* %6, i32* %7, i32* %8)
  store i64 %12, i64* %9, align 8
  %13 = load i32, i32* %4, align 4
  %14 = load i8**, i8*** %5, align 8
  %15 = load i64, i64* %9, align 8
  %16 = load i64, i64* @MMAL_SUCCESS, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %23

18:                                               ; preds = %2
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %8, align 4
  %22 = call i32 @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %19, i32 %20, i32 %21)
  store i32 0, i32* %3, align 4
  br label %29

23:                                               ; preds = %2
  %24 = load i32, i32* @stderr, align 4
  %25 = load i64, i64* %9, align 8
  %26 = load i64, i64* %9, align 8
  %27 = call i8* @mmal_status_to_string(i64 %26)
  %28 = call i32 @fprintf(i32 %24, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i64 %25, i8* %27)
  store i32 -1, i32* %3, align 4
  br label %29

29:                                               ; preds = %23, %18
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @mmal_vc_get_version(i32*, i32*, i32*) #1

declare dso_local i32 @printf(i8*, i32, i32, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i64, i8*) #1

declare dso_local i8* @mmal_status_to_string(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
